# ST2110-OBS-PLUGIN

./: .gitignore  CMakeLists.txt
apps/st2110_mtl_rx_worker/: CMakeLists.txt  main.cpp  mtl_audio_rx_session.cpp  mtl_audio_rx_session.hpp  mtl_receive_graph.cpp  mtl_receive_graph.hpp  mtl_runtime_context.cpp  mtl_runtime_context.hpp  mtl_video_rx_session.cpp  mtl_video_rx_session.hpp  mtl_worker_event_writer.cpp  mtl_worker_event_writer.hpp  mtl_worker_health.hpp  mtl_worker_process_state.cpp  mtl_worker_process_state.hpp  mtl_worker_stats.hpp
apps/st2110_mtl_send_test/: CMakeLists.txt  main.cpp
docs/: doc.md  (+63 more)
libs/st2110core/: CMakeLists.txt
libs/st2110core/include/st2110/: audio_channel_order.hpp  audio_frame.hpp  audio_frame_assembler.hpp  audio_packet.hpp  audio_receiver_bootstrap.hpp  audio_reorder_buffer.hpp  audio_sdp_ingestion.hpp  audio_sdp_media_section.hpp  audio_sdp_signaling_adapter.hpp  audio_sdp_timing_attributes.hpp  audio_signaling.hpp  audio_signaling_rx_config.hpp  audio_stats.hpp  audio_timestamp_mapping.hpp  backend.hpp  backend_factory.hpp  bytes.hpp  config_validation.hpp  depacketizer.hpp  endian.hpp  error.hpp  fixed_reorder_buffer.hpp  frame_assembler.hpp  frame_write_coverage.hpp  linux_socket_rx_port.hpp  mtl_rx_backend_factory.hpp  mtl_rx_video_backend.hpp  packet_admission.hpp  packet_parse.hpp  packet_view.hpp  pixel_format.hpp  receive_reorder_tolerance_policy.hpp  reorder_buffer.hpp  rtp.hpp  rtp_timestamp_anchor_policy.hpp  rx_config.hpp  signaling_structs.hpp  socket_runtime.hpp  socket_rx_audio_backend.hpp  socket_rx_single_media_backend_base.hpp  (+28 more)
libs/st2110core/include/st2110/backends/: receive_local_policy.hpp
libs/st2110core/include/st2110/backends/mtl/: mtl_runtime_config.hpp  mtl_runtime_resolver.hpp  mtl_rx_audio_backend.hpp  mtl_rx_audio_backend_proxy.hpp  mtl_rx_backend_factory.hpp  mtl_rx_video_backend.hpp  mtl_rx_video_backend_proxy.hpp  mtl_video_projection.hpp  mtl_video_support.hpp  mtl_worker_control_channel.hpp  mtl_worker_graph_client.hpp  mtl_worker_ipc_codec.hpp  mtl_worker_ipc_framing.hpp  mtl_worker_manager.hpp  mtl_worker_process_control_channel.hpp  mtl_worker_protocol.hpp  mtl_worker_shared_memory_ring.hpp  mtl_worker_shared_memory_ring_owner.hpp
libs/st2110core/include/st2110/backends/socket/: socket_rx_audio_backend.hpp  socket_rx_single_media_backend_base.hpp  socket_rx_video_backend.hpp
libs/st2110core/include/st2110/contracts/: rtp_timestamp_mapper_config.hpp  settings.hpp
libs/st2110core/include/st2110/contracts/audio/: audio_receiver_bootstrap.hpp  audio_signaling_rx_config.hpp  rx_audio_session_config.hpp
libs/st2110core/include/st2110/contracts/backend/: backend.hpp  backend_factory.hpp  backend_factory_registry.hpp
libs/st2110core/include/st2110/contracts/video/: depacketizer_config.hpp  partial_unit_policy.hpp  rx_video_session_config.hpp  video_backend_selection.hpp  video_receice_pipeline_config.hpp  video_receive_pipeline_config.hpp  video_receiver_bootstrap.hpp  video_timestamp_mapper_config.hpp  video_unit_reconstructor_config.hpp
libs/st2110core/include/st2110/delivery/: socket_reorder_tuning.hpp  socket_start_config.hpp  synchronized_frame_sink.hpp  synchronized_playout_tuning.hpp
libs/st2110core/include/st2110/delivery/audio/: audio_frame.hpp  (+3 more)
libs/st2110core/include/st2110/foundation/: bytes.hpp  derived_values.hpp  endian.hpp  error.hpp  rtp_timestamp_anchor_policy.hpp  rtp_timestamp_mapper.hpp  stats.hpp  timestamp.hpp
libs/st2110core/include/st2110/model/: common_sdp_parameters.hpp
libs/st2110core/src/: backend_factory_registry.cpp  mtl_rx_backend_factory.cpp  mtl_rx_backend_factory_unavailable.cpp  mtl_rx_video_backend.cpp  socket_rx_audio_backend.cpp  socket_rx_single_media_backend_base.cpp  socket_rx_video_backend.cpp  stub.cpp
libs/st2110core/src/backends/: receive_local_policy.cpp
libs/st2110core/src/backends/mtl/: mtl_rx_audio_backend.cpp  mtl_rx_audio_backend_proxy.cpp  mtl_rx_backend_factory.cpp  mtl_rx_video_backend.cpp  mtl_rx_video_backend_proxy.cpp  mtl_worker_control_channel.cpp  mtl_worker_graph_client.cpp  mtl_worker_ipc_codec.cpp  mtl_worker_ipc_framing.cpp  mtl_worker_manager.cpp  mtl_worker_process_control_channel.cpp  mtl_worker_shared_memory_ring.cpp  mtl_worker_shared_memory_ring_owner.cpp
libs/st2110core/src/backends/socket/: socket_rx_single_media_backend_base.cpp
plugins/obs_st2110/: CMakeLists.txt
plugins/obs_st2110/include/obs_st2110/: discovery_provider.hpp  plugin_api.hpp  sdp_media_selection.hpp  sdp_parser_dispatch.hpp  source_config.hpp  source_runtime.hpp
plugins/obs_st2110/src/: discovery_provider.cpp  obs-synchronized-frame-sink.cpp  obs-synchronized-frame-sink.hpp  plugin-main.cpp  sdp_media_selection.cpp  sdp_parser_dispatch.cpp  source_runtime.cpp  st2110-source.cpp  st2110-source.hpp
tests/: CMakeLists.txt  audio_channel_order_boundary_test.cpp  audio_receiver_bootstrap_test.cpp  audio_sdp_ingestion_test.cpp  audio_sdp_media_section_test.cpp  audio_sdp_signaling_adapter_test.cpp  audio_sdp_timing_attributes_test.cpp  audio_signaling_model_test.cpp  audio_signaling_to_rx_config_test.cpp  audio_timestamp_mapping_invariants_test.cpp  audio_timestamp_mapping_test.cpp  test_audio_frame.cpp  test_audio_frame_assembler.cpp  test_audio_packet.cpp  test_audio_reorder_buffer.cpp  test_audio_rtp_parser.cpp  test_audio_stats.cpp  test_backend_factory.cpp  test_backend_interface.cpp  test_bytespan.cpp  test_config_validation.cpp  test_depacketizer_api.cpp  test_depacketizer_grouping.cpp  test_depacketizer_marker.cpp  test_depacketizer_segment_mapping.cpp  test_depacketizer_stats.cpp  test_depacketizer_trailing_padding.cpp  test_depacketizer_trailing_padding_state.cpp  test_depacketizer_unit_state.cpp  test_depacketizer_writes.cpp  test_endian.cpp  test_error.cpp  test_extended_seq.cpp  test_fixed_reorder_buffer.cpp  test_fixed_reorder_buffer_flush.cpp  test_fixed_reorder_buffer_stats.cpp  test_frame_assembler_bounds.cpp  test_frame_assembler_completeness.cpp  test_frame_assembler_lifecycle.cpp  test_frame_assembler_partial_policy.cpp  (+76 more)
(+83 files in other folders)
