function(add_st2110_test name)
    add_executable(${name} ${ARGN})
    target_link_libraries(${name} PRIVATE st2110core)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

add_st2110_test(test_smoke test_smoke.cpp)
add_st2110_test(test_endian test_endian.cpp)
add_st2110_test(test_error test_error.cpp)
add_st2110_test(test_bytespan test_bytespan.cpp)
add_st2110_test(test_rx_config test_rx_config.cpp)