function(add_st2110_test name)
    add_executable(${name} ${ARGN})
    target_link_libraries(${name} PRIVATE st2110core)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

add_st2110_test(test_smoke test_smoke.cpp)
add_st2110_test(test_endian test_endian.cpp)
add_st2110_test(test_error test_error.cpp)
add_st2110_test(test_bytespan test_bytespan.cpp)
add_st2110_test(test_rx_config test_rx_config.cpp)
add_st2110_test(test_video_frame test_video_frame.cpp)
add_st2110_test(test_backend_interface test_backend_interface.cpp)
add_st2110_test(test_rtp_parser test_rtp_parser.cpp)
add_st2110_test(test_rtp_seq test_rtp_seq.cpp)
add_st2110_test(test_rtp_payload test_rtp_payload.cpp)
add_st2110_test(test_st2110_20_types test_st2110_20_types.cpp)
add_st2110_test(test_st2110_20_parse test_st2110_20_parse.cpp)
add_st2110_test(test_st2110_20_validate test_st2110_20_validate.cpp)
add_st2110_test(test_extended_seq test_extended_seq.cpp)
add_st2110_test(test_stats test_stats.cpp)
add_st2110_test(test_config_validation test_config_validation.cpp)
add_st2110_test(test_packet_view test_packet_view.cpp)
add_st2110_test(test_packet_view_parse test_packet_view_parse.cpp)
add_st2110_test(test_packet_parse_stats test_packet_parse_stats.cpp)
add_st2110_test(test_zero_length_srd test_zero_length_srd.cpp)
add_st2110_test(test_reorder_buffer_interface test_reorder_buffer_interface.cpp)
add_st2110_test(test_fixed_reorder_buffer test_fixed_reorder_buffer.cpp)
add_st2110_test(test_fixed_reorder_buffer_stats test_fixed_reorder_buffer_stats.cpp)
add_st2110_test(test_fixed_reorder_buffer_flush test_fixed_reorder_buffer_flush.cpp)
add_st2110_test(test_video_frame_mutable_access test_video_frame_mutable_access.cpp)
add_st2110_test(test_frame_assembler_lifecycle test_frame_assembler_lifecycle.cpp)
add_st2110_test(test_frame_assembler_bounds test_frame_assembler_bounds.cpp)
add_st2110_test(test_frame_write_coverage test_frame_write_coverage.cpp)
add_st2110_test(test_frame_assembler_completeness test_frame_assembler_completeness.cpp)
add_st2110_test(test_frame_assembler_partial_policy test_frame_assembler_partial_policy.cpp)
add_st2110_test(test_depacketizer_api test_depacketizer_api.cpp)
add_st2110_test(test_depacketizer_grouping test_depacketizer_grouping.cpp)
add_st2110_test(test_depacketizer_marker test_depacketizer_marker.cpp)
add_st2110_test(test_depacketizer_writes test_depacketizer_writes.cpp)
add_st2110_test(test_depacketizer_stats test_depacketizer_stats.cpp)
add_st2110_test(test_header_odr_link
        test_header_odr_link_main.cpp
        test_header_odr_link_a.cpp
        test_header_odr_link_b.cpp
)
add_st2110_test(test_video_segment_constraints test_video_segment_constraints.cpp)
add_st2110_test(test_st2110_20_ordering test_st2110_20_ordering.cpp)
add_st2110_test(test_packet_parse_policy test_packet_parse_policy.cpp)
add_st2110_test(test_packet_parse_integration_stats test_packet_parse_integration_stats.cpp)
add_st2110_test(test_video_scan_mode test_video_scan_mode.cpp)
add_st2110_test(test_video_receive_semantics test_video_receive_semantics.cpp)